# OCR-eg

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle_macos.sh
.github/workflows/: release.yml
src/: config.rs  i18n.rs  main.rs  mistral_api.rs  pdf_utils.rs
src/providers/: mistral.rs  mod.rs
