[package]
name = "OCR-eg"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.28"
lopdf = "0.33"
printpdf = "0.7"
image = "0.24"
rfd = "0.14"
base64 = "0.22"
confy = "0.6"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
path-clean = "1.0"
walkdir = "2.5"
tempfile = "3.10"
futures = "0.3"
open = "5.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
